[package]

name = "hexfloat"
version = "0.1.2"
authors = ["The Rust Project Developers"]

license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/hexfloat"
homepage = "https://github.com/rust-lang/hexfloat"
keywords = ["plugin", "macro", "floating-point", "numerics"]
description = """
Syntax extension to create floating point literals from hexadecimal strings
"""

[lib]

name = "hexfloat"
plugin = true
